--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -7,6 +8,11 @@ h1{
     font:bold;
     color:darkslategray;
     
+}
+h2{
+    font-size: 40px;
+    color:darkslategray;
+ 
 }
 p{
     font-size: 20px;
@@ -23,11 +29,16 @@ section{
     padding-left: 70px;
     padding-top: 90px;
 }
-.half-width img{
+#pic1 img{
     width: 100%;
     margin-left: -40px;
     margin-top: -70px;
  
+}
+#pic2 img{
+    width: 50%;
+    padding-left: 100px;
+    margin-top: -20px;
 }
 .button-link{
     text-decoration: none;
@@ -36,4 +47,10 @@ section{
     color: lavenderblush;
     border-radius: 30px;
     
+}
+.background-image{
+    background-image: url(images/shapes/7.png);
+    background-repeat: no-repeat;
+    margin-top: 70px;
+    background-size: 100%;
 }
