--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@ h2{
     color:darkslategray;
  
 }
+h3{
+    font-size: 30px;
+    color:darkslategray;
+    text-align: center;
+    margin-top: 70px;
+}
+h4{
+    font-size: 25px;
+    color:darkslategray;
+}
+
 p{
     font-size: 20px;
     color: gray;
@@ -21,7 +32,7 @@ p{
 .set-color{
     color: orangered;
 }
-section{
+.flexible{
     display: flex;
 }
 .half-width{
@@ -53,4 +64,37 @@ section{
     background-repeat: no-repeat;
     margin-top: 70px;
     background-size: 100%;
+}
+
+#recipe-p{
+    text-align: center;
+    
+    padding-left:20% ;
+    padding-right: 20%;
+    margin-top: -30px;
+}
+.recipe-i{
+    width: 25% ;
+    border-radius: 20px;
+    box-shadow: 10px 15px 30px  slategrey;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding:10px 10px;
+}
+.recipe-i img{
+    width: 100%;
+}
+
+#box1{
+    margin-left: 6%;
+}
+#box3{
+    margin-right: 6%;
+}
+footer{
+    background-color:black;
+    text-align: center;
+    margin-top: 80px;
+    padding-bottom: 40px;
+    padding-top: 1px;
 }
